--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -35,15 +35,21 @@ bindregionchange='regionChange' controls='{{controls}}'
     <cover-image src="../../image/list.png" bindtap ='getShopList' class="list"></cover-image>
   </cover-view>
   <cover-image class="fixed" src="../../image/nail.png"></cover-image>
-  <cover-view class="info-add" wx:if="{{GetInfo}}" style="left:15vw">
-  <cover-view > 这是一个伪铲屎官为了给自己的程序凑字数瞎几把乱写的一堆文字，了解一下就OK！ヾ(=･ω･=)o</cover-view>
- 
-  <cover-view class='cu-tag bg-red light sm round'>背包：充足</cover-view>
-  <cover-view class='cu-tag bg-green light sm round'>旅行箱：紧俏</cover-view>
-  
+
+  <cover-image class="localed"  style="left:5vw" src='../../image/local.png' bindtap='toLocation'></cover-image>
+  <!-- <cover-view class="address-add" wx:if="{{InMap}}" style="left:15vw">存的按钮</cover-view> -->
+  <cover-image class="localed"  style="right:5vw" src='../../image/service.png' bindtap=''></cover-image>
+  <!-- <cover-view class="address-add" wx:if="{{InMap}}" style="right:15vw">取的按钮</cover-view> -->
+  <cover-view class="localed-button">扫码存取</cover-view>
+    <cover-view class="info-add"  wx:if="{{GetInfo}}" style="left:5vw" bindtap='goToShopDetail'>
+    <!-- wx:if="{{GetInfo}}" -->
+    <cover-view style='width:100%;height:80rpx;line-height:80rpx;background:#2c2c2c;color:white;text-align:center;'>{{shopName}}</cover-view>
+    <cover-view style='width:100%;height:80rpx;line-height:80rpx;text-align:left;padding-left:10rpx;font-size:24rpx;'>地址：{{shopAddress}}</cover-view>
+    <cover-view style='width:100%;height:30rpx;line-height:30rpx;text-align:left;padding-left:10rpx;font-size:24rpx;'>工作时间：{{time}}</cover-view>
+    <!-- <cover-view style='width:50%;height:200rpx;text-align:center;'> {{shopAddress}}</cover-view> -->
+    <cover-view style='text-align:center;height:60rpx;line-height:60rpx;'>
+    <cover-view class='cu-tag bg-{{backpackColor}} light sm round'>背包：{{backpack}}</cover-view>
+    <cover-view class='cu-tag bg-{{luggageColor}} light sm round'>旅行箱：{{luggage}}</cover-view>
+    </cover-view>
   </cover-view> 
-  <cover-image class="localed"  style="left:3vw" src='../../image/local.png' bindtap='toLocation'></cover-image>
-  <cover-view class="address-add" wx:if="{{InMap}}" style="left:15vw">存的按钮</cover-view>
-  <cover-image class="localed"  style="right:3vw" src='../../image/service.png' bindtap=''></cover-image>
-  <cover-view class="address-add" wx:if="{{InMap}}" style="right:15vw">取的按钮</cover-view>
 </map>
