--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -1,7 +1,19 @@
-<view style='width:100vw;text-align:center;margin:100rpx 0 100rpx 0'> <image src="{{headImg}}" style='width: 160rpx;height: 160rpx;border-radius: 100rpx;'></image>
-<view style='width:100vw'><text>{{nickName}}</text></view>
+<!-- <view style='width:100vw;text-align:center;margin:100rpx 0 100rpx 0'>  -->
+<!-- <image src="{{headImg}}" style='width: 160rpx;height: 160rpx;border-radius: 100rpx;'></image>
+<view style='width:100vw'><text>{{nickName}}</text></view> -->
 
-</view>
+<view class="UCenter-bg">
+    <image src="{{headImage}}" style='border-radius: 50%;' class="png" mode="widthFix"></image>
+    <view class="text-xl">{{nickName}}
+    </view>
+    <!-- <view class="margin-top-sm">
+      <text>By:STVEA</text>
+    </view> -->
+  
+    <image src="https://image.weilanwl.com/gif/wave.gif" mode="scaleToFill" class="gif-wave" ></image>
+  </view>
+
+<!-- </view> -->
 
 
   <view class="cu-form-group">
@@ -28,7 +40,26 @@
       </view>
     </view>
     <view class='padding-xl'>
-      用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文用户协议正文
+1、快点寄存服务（以下称“本服务”）对于用户所寄存的物品，有义务进行妥善保管。
+2、寄存物品范围：日常生活用品、衣物等符合法律法规规定的物品。
+3、不得寄存现金、贵重物品（金银首饰、珠宝、有价或无价证券等）、证件、重要文件、易碎物品、殡葬品等，此类物品请用户自行保管，本服务暂不受理。
+4、依据法律法规规定，本服务严格禁止寄存以下物品：
+（1）枪支、弹药、雷管、管制刀具等危险品；
+（2）易燃易爆物品、鲜活易腐物品、毒品、放射性物质等；
+（3）现金、文物、贵重仪器、贵重金属等；
+（4）标有密级的文件、图纸和其他资料；
+（5）可能危害公共安全的其他物品；
+如检查发现用户寄存违规物品，本服务有权按照有关规定处理或移交公安部门处理。
+5、寄存店铺工作人员按照维护公共安全的要求，有权利对于用户所寄存的物品进行检查。若用户拒绝查验，店铺工作人员有权拒绝寄存。
+6、若发现以下情况，寄存店铺工作人员有义务及时报告公安部门处理。
+（1）本协议第4条所列物品；
+（2）骗取、冒领他人财物；
+（3）故意损坏他人财物的行为
+7、寄存物品请按照预定的日期取回，超过预定日期5日后无人领取的，本服务商有权自行处理。
+8、用户凭寄存订单到店寄存以及取回行李，若到店后不能出示相关订单凭证，商家有权拒绝寄存或取回物品。
+9、用户承诺：如因寄存店铺或寄存软件的重大过失，导致所寄存物品的丢失或损坏，因其物品的现存价值不超过人民币200元，本服务商以及寄存店铺的赔偿责任以人民币200元为上限。
+10、寄存物品必须包装完整，有破损的行李不与寄存。物品包装完整的情况下，取回时若发现内部物品破损、变质，本服务商和寄存店铺不承担任何责任。
+11、若用户因丢失订单信息和寄存凭证，造成寄存物品丢失或被他人冒领，本服务商和寄存店铺不承担任何责任。
     </view>
   </view>
 </view>
