--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,34 +12,36 @@
   style="width: 100vw; height: 100vh;"
 >
   <cover-view class="cover" >
-    <cover-image src="{{headImage}}" bindtap="goToMy" class="profile"></cover-image>
-    <cover-view class='search' style='margin-left:20rpx;height:100rpx;width:530rpx;float:left;line-height:100rpx' bindtap='goToSearch'>搜索寄存点</cover-view>
+    <!-- <cover-image src="{{headImage}}" bindtap="goToMy" class="profile"></cover-image> -->
+    <cover-view style='margin-left:20rpx;float:left;height:100rpx;line-height:100rpx;'>南京</cover-view>
+    <cover-view class='search text-gray' style='margin-left:40rpx;height:100rpx;width:530rpx;float:left;line-height:100rpx' bindtap='goToSearch'>搜索寄存点</cover-view>
     <cover-image src="../../image/list.png" bindtap ='getShopList' class="list"></cover-image>
   </cover-view>
   <cover-image class="fixed" src="../../image/nail.png"></cover-image>
 
-  <cover-image class="localed"  style="left:5vw" src='../../image/local.png' bindtap='toLocation'></cover-image>
-  <!-- <cover-view class="address-add" wx:if="{{InMap}}" style="left:15vw">存的按钮</cover-view> -->
-  <cover-image class="localed"  style="right:5vw" src='../../image/service.png' bindtap=''></cover-image>
-  <!-- <cover-view class="address-add" wx:if="{{InMap}}" style="right:15vw">取的按钮</cover-view> -->
+  <cover-image class="localed"  style="left:20rpx" src='../../image/local.png' bindtap='toLocation'></cover-image>
+
+  <cover-image class="localed"  style="right:20rpx;top:106rpx;" src='../../image/service.png' bindtap=''></cover-image>
+
   <cover-view class="localed-button">扫码存取</cover-view>
-  <cover-view class="info-add" wx:if="{{GetInfo}}" style='left:50rpx;' bindtap='goToShopDetail'>
-    <cover-view style='float:left;margin-left:25rpx;margin-top:10rpx;height:150rpx;width:150rpx;'>
-      <cover-image style='float:left;width:100rpx;height:100rpx;margin-left:25rpx;margin-top: 25rpx;border-radius:10px;' src="../../image/kd.jpg"></cover-image>
+<!-- wx:if="{{GetInfo}}" -->
+  <cover-view class="info-add"  style='left:20rpx;' bindtap='goToShopDetail'>
+    <cover-view style='float:left;margin:50rpx 30rpx 30rpx 30rpx;'>
+      <cover-image style='float:left;width:120rpx;height:120rpx;border-radius:10px;' src="../../image/kd.jpg"></cover-image>
     </cover-view>
-    <cover-view style='float:left;width:460rpx;margin-top:25rpx;height:50rpx;line-height:50rpx'>
+    <cover-view style='float:left;width:460rpx;margin-top:25rpx;height:80rpx;line-height:80rpx;font-size:30rpx;'>
       {{shopName}}
     </cover-view>
-    <cover-view class='text-grey' style='float:left;width:450rpx;height:30rpx;line-height:30rpx;font-size:20rpx;'>
+    <cover-view class='text-grey inline fff' style='display: inline;;float:left;width:450rpx;height:70rpx;line-height:35rpx;font-size:25rpx;'>
       {{shopAddress}}
     </cover-view>
-    <cover-view style='float:left;width:450rpx;height:30rpx;line-height:30rpx;font-size:20rpx;'>
+    <cover-view style='margin-bottom:30rpx;float:left;width:450rpx;height:50rpx;line-height:50rpx;font-size:25rpx;'>
       {{time}}
     </cover-view>
-    <cover-view class='text-gray'  style='float:left;width:100%;height:20rpx;line-height:20rpx;text-align:center'>
+    <cover-view class='text-gray'  style='margin-bottom:20rpx;float:left;width:100%;height:20rpx;line-height:20rpx;text-align:center'>
     - - - - - - - - - - - - -
     </cover-view>
-    <cover-view style='margin-left:50rpx;float:left;text-align:center;height:60rpx;line-height:60rpx;'>
+    <cover-view style='float:left;text-align:center;height:60rpx;line-height:60rpx;width:100%'>
       <cover-view class='cu-tag bg-{{backpackColor}} light sm round'>
         背包：{{backpack}}
       </cover-view>
@@ -47,13 +49,10 @@
         旅行箱：{{luggage}}
       </cover-view>
     </cover-view>
-    <!-- <cover-view style='width:100%;height:80rpx;line-height:80rpx;background:#2c2c2c;color:white;text-align:center;'>{{shopName}}</cover-view>
-    <cover-view style='width:100%;height:80rpx;line-height:80rpx;text-align:left;padding-left:10rpx;font-size:24rpx;'>地址：{{shopAddress}}</cover-view>
-    <cover-view style='width:100%;height:30rpx;line-height:30rpx;text-align:left;padding-left:10rpx;font-size:24rpx;'>工作时间：{{time}}</cover-view>
-    <cover-view style='text-align:center;height:60rpx;line-height:60rpx;'>
-    <cover-view class='cu-tag bg-{{backpackColor}} light sm round'>背包：{{backpack}}</cover-view>
-    <cover-view class='cu-tag bg-{{luggageColor}} light sm round'>旅行箱：{{luggage}}</cover-view>
-    </cover-view> -->
   </cover-view> 
+  
+  <cover-view style='position:fixed;bottom:90rpx;background:white;right:-80rpx; width:200rpx;height:100rpx;border-radius: 50rpx;'>
+  <cover-image src="{{headImage}}" bindtap="goToMy" class="profile"></cover-image>
+  </cover-view>
 
 </map>
