--- a/pages/shopDetail/shopDetail.wxml
+++ b/pages/shopDetail/shopDetail.wxml
@@ -7,7 +7,7 @@
     <image src="{{image1}}" mode='aspectFill'></image>
   </swiper-item>
   <swiper-item>
-    <image src="{{image2}}" mode='aspectFill'></image>
+    <image src="{{image2}}" mode='aspectFill' binderror='sss'></image>
   </swiper-item>
 </swiper>
 
